--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,9 +1,15 @@
 /* add css module styles here (optional) */
 
-.test {
+/* .test {
   margin: 2em;
   padding: 0.5em;
   border: 2px solid #000;
   font-size: 2em;
   text-align: center;
+} */
+
+.test{
+  border-bottom: 1px solid #111;
+  width:90%;
+  margin:0 auto
 }
