--- a/src/index.module.css
+++ b/src/index.module.css
@@ -4,13 +4,9 @@
   margin:20px;
 }
 
-.table {
-  width:100%;
-  padding:20px;
-}
-
 .footer {
   display: flex;
   justify-content: space-between;
   margin:20px;
+  align-items: center;
 }
